Fixed header z-index

--- a/assets/css/_sass/_outer-structure.scss
+++ b/assets/css/_sass/_outer-structure.scss
@@ -56,7 +56,7 @@ body {
     background-color: white;
     width: calc(100vw - 40px);
     max-width: 1100px;
-
+    z-index: 1000;
     padding: 20px 20px 0;
     top: 0;
     left: 50%;
